<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/main_container"
    android:background="#dcffc0">

    <EditText
        android:id="@+id/Number_Input"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:hint="@string/number_input"
        android:background="#ffe0b9"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/Button_Quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_quit"
        android:background="#ff3f47"
        android:layout_gravity="end" />

    <Button
        android:id="@+id/Button_Push"
        android:layout_width="87.5dip"
        android:layout_height="87.5dip"
        android:background="@drawable/ronnie" />

    <Button
        android:id="@+id/Button_Pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pop"
        android:background="#9bb0ff" />

    <TextView android:text="@string/app_announce"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/message_view"
        android:textColor="#0b1042" />

    <TextView
        android:id="@+id/stack_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#0b1042"
        />

</LinearLayout>
